--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
     <main style="min-height: 100vh;">
         <section class="hero">
             <h2>what i do</h2>
-            <p>I have experience managing & marketing for a brand that sells children christain materials & a health and beauty company online. I have full digital marketing knowledge but decided to put my strength in what I can do best under digital marketing which happens to be <b>Social media marketing</b>.</p>
-            <p>As a front end developer, I created my personal site using <i>HTML</i> and <i>CSS</i> and I'm currently on a self-taught journey to learn the programming lanaguage that's responisble for user interaction, which is <b>Javascript</b>.</p>
+            <p>I have experience managing & marketing for a brand that sells children christian materials & a health and beauty company online. I have full digital marketing knowledge but decided to put my strength in what I can do best under one of the types of digital marketing which is <i>Social Media Marketing</i>.</p>
+            <p>As a front end developer, I created my personal site using <i>HTML</i> and <i>CSS</i> and I'm currently on a self-taught journey to learn the programming lanaguage that's responisble for user interaction, which is <i>JavaScript</i>.</p>
         </section>
 
         <section style="line-height: 24px; padding-inline: 4.38vw; padding-top: 10px; padding-bottom: 20px;">
@@ -33,6 +33,7 @@
                 <li>Hypertext Markup Language (HTML)</li>
                 <li>Cascading Style Sheets (CSS)</li>
                 <li>User Interface</li>
+                <li>Problem Solving</li>
             </ul>
         </section>
 
