--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About | Godsfavour Taiwo</title>
+    <link rel="icon" href="/images/favicon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,7 +22,7 @@
     <main style="min-height: 100vh;">
         <section class="hero">
             <h2>what i do</h2>
-            <p>I have experience managing & marketing for a brand that sells children christian materials & a health and beauty company online. I have full digital marketing knowledge but decided to put my strength in what I can do best under one of the types of digital marketing which is <i>Social Media Marketing</i>.</p>
+            <p>I have experience managing & marketing for a brand that sells children christian materials & a health and beauty company online. I have full digital marketing knowledge but decided to put my strength in what I can do best under one of the channels of digital marketing which is <i>Social Media Marketing</i>.</p>
             <p>As a front end developer, I created my personal site using <i>HTML</i> and <i>CSS</i> and I'm currently on a self-taught journey to learn the programming lanaguage that's responisble for user interaction, which is <i>JavaScript</i>.</p>
         </section>
 
