--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Godsfavour Taiwo</title>
-
+    <link rel="icon" href="/images/favicon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
             <div>
                 <h4>Welcome</h4>
                 <h1>I'm Godsfavour Taiwo</h1>
-                <p>a <i>Social Media Marketing Manager & Front-End Web Developer</i></b> based in Lagos, Nigeria. Navgating through the world of Digital Marketing and Tech, I'm passionate about using my creative ability to give the best of the best to both clients and customers.</p>
+                <p>a <i>Social Media Associate & Frontend Web Developer</i></b> based in Lagos, Nigeria. Navgating through the world of Digital Marketing and Tech, I'm passionate about using my creative ability to give the best of the best to both clients and customers.</p>
             </div>
         </section>
     </main>
